fixed z-index

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -87,7 +87,7 @@ img {
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 20;
+  z-index: 2000;
   transition: opacity var(--timing-function);
 
   overflow-y: scroll;
@@ -98,7 +98,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 30;
+  z-index: 3000;
 
   width: 280px;
 
@@ -119,8 +119,6 @@ img {
 .active {
   opacity: 1;
   visibility: visible;
-
-  z-index: 25;
 }
 
 .no-scroll {
